--- a/AspNetMVCEgitim/AspNetMVCEgitim.csproj
+++ b/AspNetMVCEgitim/AspNetMVCEgitim.csproj
@@ -133,6 +133,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="EgitimNotlari\multi-column-forms.html" />
     <Content Include="EgitimNotlari\Notlar.txt" />
+    <Content Include="EgitimNotlari\sample-data.sql" />
+    <Content Include="EgitimNotlari\sample-model.sql" />
     <Content Include="EgitimNotlari\tabbed.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
