--- a/AspNetMVCEgitim/Web.config
+++ b/AspNetMVCEgitim/Web.config
@@ -63,7 +63,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SampleDatabase" connectionString="data source=DESKTOP-MK23B9T;initial catalog=SampleDatabase;persist security info=True;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="SampleDatabase1" connectionString="data source=127.0.0.1,1433;initial catalog=SampleDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SampleDatabase" connectionString="data source=127.0.0.1,1433;initial catalog=SampleDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
