ürün ekleme  sayfası yapıldı

--- a/AspNetMVCEgitim/Web.config
+++ b/AspNetMVCEgitim/Web.config
@@ -64,5 +64,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="SampleDatabase" connectionString="data source=127.0.0.1,1433;initial catalog=SampleDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SampleDatabase1" connectionString="data source=127.0.0.1,1433;initial catalog=SampleDatabase;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SampleDatabase2" connectionString="data source=127.0.0.1,1433;initial catalog=SampleDatabase;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
