--- a/AspNetMVCEgitim/AspNetMVCEgitim.csproj
+++ b/AspNetMVCEgitim/AspNetMVCEgitim.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Models\Entities\Product.cs" />
     <Compile Include="Models\Entities\SampleDatabase.cs" />
     <Compile Include="Models\Entities\Supplier.cs" />
+    <Compile Include="Models\ViewModels\ProductEkleViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2544,6 +2545,7 @@
     <Content Include="Views\Product\Ekle.cshtml" />
     <Content Include="Views\Product\Sil.cshtml" />
     <Content Include="Views\Order\Ekle.cshtml" />
+    <Content Include="Views\Product\Listele.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
